# dagster-document-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: future_enhancements.md
docs/validation/: 01_arithmetic_rules.md  02_field_constraints.md  03_capital_account_rules.md  04_cross_partner_validation.md  05_validation_design.md
frontend/: index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
k1_pipeline/: README.md  pyproject.toml
k1_pipeline/.dg/: telemetry.yaml
k1_pipeline/scripts/: copy_results_to_frontend.sh  fill_irs_k1.py  generate_sample_k1.py  k1_profiles_6_10.py
k1_pipeline/src/k1_pipeline/defs/: assets.py  batch_assets.py  k1_profiles.py  pdf_templates.py  sensors.py
pipeline/: pyproject.toml
pipeline/scripts/: fill_irs_k1.py  generate_batch_k1s.py  generate_cross_partner_k1s.py  generate_sample_k1.py  k1_cross_partner_profiles.py  k1_profiles_1_5.py  k1_profiles_6_10.py  ocr_stress_test.py  run_all_pdfs.py
pipeline/src/k1_pipeline/defs/: assets.py  cross_partner.py  cross_partner_rules.py  duckdb_store.py  overview.py  pdf_templates.py  resources.py  sensors.py  validation.py
scripts/: minify_instructions.py  start_localstack.sh
