[project]
name = "k1_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.14",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "pydantic-ai",
    "surya-ocr",
    "transformers>=4.56.1,<5",
    "numpy",
    "pdf2image",
    "Pillow",
    "reportlab",
    "python-dotenv",
    "en-core-web-lg",
    "pypdfform>=4.6.0",
    "gliner",
    "weasyprint",
    "boto3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "k1_pipeline"
registry_modules = [
    "k1_pipeline.components.*",
]

[tool.uv]
# surya-ocr pins pillow<11 but pypdfform requires pillow>=12.
# Pillow 12 is backwards-compatible; override surya's upper bound.
override-dependencies = ["pillow>=12.0.0"]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz" }


